--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Unity WebGL Player | Parade of Trades</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TH3NM7PDK9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TH3NM7PDK9');
+</script>
+    
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
